--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.9.0",
+    "firebase": "^11.6.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
