--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.9.0",
     "firebase": "^11.6.1",
+    "i18next": "^25.1.2",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.2",
     "twilio-video": "^2.31.0"
