--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.2",
     "axios": "^1.9.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.11.3",
@@ -22,11 +23,13 @@
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.5.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.2",
-    "twilio-video": "^2.31.0"
+    "twilio-video": "^2.31.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
